--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-burger-menu": "^3.0.9",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-icons": "^4.10.1",
     "react-phone-number-input": "^3.4.5",
     "react-router-dom": "^6.3.0",
