--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-# REACT_APP_URL= http://localhost:3000/
-# REACT_APP_API_URL= http://localhost:5000/api/
+REACT_APP_URL= http://localhost:3000/
+REACT_APP_API_URL= http://localhost:5000/api/
 
-REACT_APP_URL= https://admin.mosouq.ae/
-REACT_APP_API_URL= https://apis.mosouq.ae/api/
+# REACT_APP_URL= https://admin.mosouq.ae/
+# REACT_APP_API_URL= https://apis.mosouq.ae/api/
 
 
 
