--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.0.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.460.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.1",
