--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.1.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^4.4.3",
@@ -29,6 +30,7 @@
     "react-select": "^5.8.0",
     "react-toastify": "^9.1.1",
     "sweetalert2": "^11.12.4",
+    "tinymce": "^7.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
